--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
     "128": "icon/128.png"
   },
   "side_panel": {
-    "default_path": "src/home.html"
+    "default_path": "src/PanelRoute.html"
   },
   "{{chrome}}.permissions": [
     "sidePanel"
