--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "build:firefox": "cross-env TARGET=firefox tsc && vite build",
+    "build:chrome": "cross-env TARGET=chrome tsc && vite build"
   },
   "dependencies": {
     "@langchain/community": "^0.0.1",
@@ -16,6 +18,7 @@
     "@langchain/openai": "^0.0.1",
     "@mlc-ai/web-llm": "^0.2.78",
     "@types/chrome": "^0.0.313",
+    "cross-env": "^7.0.3",
     "langchain": "^0.1.37",
     "lucide-react": "^0.501.0",
     "react": "^18.2.0",
@@ -23,10 +26,14 @@
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/webextension-polyfill": "^0.10.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "typescript": "~5.6.3",
     "vite": "^5.0.0",
     "vite-plugin-web-extension": "^4.0.0",
