--- a/package.json
+++ b/package.json
@@ -21,22 +21,21 @@
     "cross-env": "^7.0.3",
     "langchain": "^0.1.37",
     "lucide-react": "^0.501.0",
+    "preline": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/webextension-polyfill": "^0.10.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
     "typescript": "~5.6.3",
     "vite": "^5.0.0",
     "vite-plugin-web-extension": "^4.0.0",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.10.0",
+    "tailwindcss": "^3.4.0"
   }
 }
