--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "preline": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.5.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.5.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -32,10 +34,10 @@
     "@types/webextension-polyfill": "^0.10.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.6.3",
     "vite": "^5.0.0",
     "vite-plugin-web-extension": "^4.0.0",
-    "webextension-polyfill": "^0.10.0",
-    "tailwindcss": "^3.4.0"
+    "webextension-polyfill": "^0.10.0"
   }
 }
