--- a/puppeter/package.json
+++ b/puppeter/package.json
@@ -9,6 +9,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "puppeteer": "^20.0.0"
   }
 }
